fixed spacing on skills and work tables

--- a/less/index.less
+++ b/less/index.less
@@ -167,6 +167,7 @@ nav {
 		border-radius: 0.6rem;
 		height: 3rem;
 		padding: 0.6rem;
+		line-height: 2rem;
 	}
 } //end moreAboutMe
 
@@ -181,6 +182,7 @@ nav {
 			height: 3.5rem;
 			padding: 1rem;
 			width: 33.3%;
+			line-height: 2rem;
 		}
 
 		ul {
